# rizin

./: meson.build
.github/workflows/: ci.yml
librz/: meson.build
librz/analysis/: meson.build
librz/analysis/p/: meson.build
librz/asm/: asm.c  meson.build
librz/asm/arch/java/: code.c
librz/asm/p/: meson.build
librz/bp/: meson.build
librz/core/: cbin.c  meson.build
librz/core/cmd_descs/: cmd_descs.c
librz/core/p/: core_java.c
librz/crypto/: meson.build
librz/debug/: meson.build
librz/egg/: meson.build
librz/include/: rz_asm.h  rz_bin.h
librz/io/: meson.build
librz/io/p/: meson.build
librz/lang/: meson.build
librz/parse/: meson.build
test/db/cmd/: cmd_search
test/db/formats/: java
