subdir('include')

# NOTE: Cannot be included here because right now shlr depends on some librz
# libraries, while other librz libraries depend in turn on shlr.
#
# subdir('util')
# subdir('socket')
# subdir('hash')
# subdir('crypto')
# subdir('cons')
#

subdir('io')
subdir('bp')
subdir('syscall')
subdir('search')
subdir('magic')
subdir('flag')
subdir('reg')
subdir('bin')
subdir('config')
subdir('parse')
subdir('lang')
subdir('asm')
subdir('analysis')
subdir('egg')
subdir('debug')
subdir('core')

subdir('analysis/d')
subdir('asm/d')
subdir('bin/d')
subdir('syscall/d')
subdir('cons/d')
subdir('magic/d')
subdir('flag/d')
subdir('main')