asm_6502_sources = [
  'p/asm_6502.c',
]

asm_6502_cs_sources = [
  'p/asm_6502_cs.c',
]

asm_8051_sources = [
  'p/asm_8051.c',
  'arch/8051/8051_ass.c',
]

asm_8051_headers = [
  'arch/8051',
]

asm_amd29k_sources = [
  'p/asm_amd29k.c',
  'arch/amd29k/amd29k.c',
]

asm_arc_sources = [
  'p/asm_arc.c',
  'arch/arc/gnu/arc-dis.c',
  'arch/arc/gnu/arc-ext.c',
  'arch/arc/gnu/arc-opc.c',
  'arch/arc/gnu/arcompact-dis.c',
]

asm_arm_as_sources = [
  'p/asm_arm_as.c',
]

asm_arm_cs_sources = [
  'p/asm_arm_cs.c',
]

asm_arm_gnu_sources = [
  'p/asm_arm_gnu.c',
  'arch/arm/aarch64/aarch64-dis-2.c',
  'arch/arm/aarch64/aarch64-dis.c',
  'arch/arm/aarch64/aarch64-opc-2.c',
  'arch/arm/aarch64/aarch64-opc.c',
  'arch/arm/armass.c',
  'arch/arm/armass64.c',
  'arch/arm/gnu/arm-dis.c',
  'arch/arm/gnu/floatformat.c',
]

asm_arm_winedbg_sources = [
  'p/asm_arm_winedbg.c',
  'arch/arm/winedbg/be_arm.c',
]

asm_avr_sources = [
  'p/asm_avr.c',
  'arch/avr/avr_disasm.c',
  'arch/avr/format.c',
  'arch/avr/disasm.c',
]

asm_bf_sources = [
  'p/asm_bf.c',
]

asm_chip8_sources = [
  'p/asm_chip8.c',
]

asm_cr16_sources = [
  'p/asm_cr16.c',
  'arch/cr16/cr16_disas.c',
]

asm_cr16_headers = [
  'arch/cr16',
]

asm_cris_gnu_sources = [
  'p/asm_cris_gnu.c',
  'arch/cris/gnu/cris-dis.c',
  'arch/cris/gnu/cris-opc.c',
]

asm_dalvik_sources = [
  'p/asm_dalvik.c',
]

asm_dcpu16_sources = [
  'p/asm_dcpu16.c',
]

asm_ebc_sources = [
  'p/asm_ebc.c',
  'arch/ebc/ebc_disas.c',
]

asm_ebc_headers = [
  'arch/ebc',
]

asm_gb_sources = [
  'p/asm_gb.c',
]

asm_h8300_sources = [
  'p/asm_h8300.c',
  'arch/h8300/h8300_disas.c',
]

asm_h8300_headers = [
  'arch/h8300',
]

asm_hexagon_sources = [
  'p/asm_hexagon.c',
  'arch/hexagon/hexagon.c',
  'arch/hexagon/hexagon_disas.c',
]

asm_hexagon_headers = [
  'arch/hexagon',
]

asm_hppa_gnu_sources = [
  'p/asm_hppa_gnu.c',
  'arch/hppa/gnu/hppa-dis.c',
]

asm_i4004_sources = [
  'p/asm_i4004.c',
]

asm_i8080_sources = [
  'p/asm_i8080.c',
]

asm_java_sources = [
  'p/asm_java.c',
  'arch/java/code.c',
  'arch/java/ops.c',
]

asm_lanai_gnu_sources = [
  'p/asm_lanai_gnu.c',
  'arch/lanai/gnu/lanai-dis.c',
  'arch/lanai/gnu/lanai-opc.c',
]

asm_lh5801_sources = [
  'p/asm_lh5801.c',
]

asm_lm32_sources = [
  'p/asm_lm32.c',
]

asm_m68k_cs_sources = [
  'p/asm_m68k_cs.c',
]

asm_m680x_cs_sources = [
  'p/asm_m680x_cs.c',
]

asm_malbolge_sources = [
  'p/asm_malbolge.c',
]

asm_mcs96_sources = [
  'p/asm_mcs96.c',
]

asm_mips_cs_sources = [
  'p/asm_mips_cs.c',
]

asm_mips_gnu_sources = [
  'p/asm_mips_gnu.c',
  'arch/mips/gnu/mips-dis.c',
  'arch/mips/gnu/mips-opc.c',
  'arch/mips/gnu/mips16-opc.c',
  'arch/mips/mipsasm.c',
]

asm_msp430_sources = [
  'p/asm_msp430.c',
  'arch/msp430/msp430_disas.c',
]

asm_msp430_headers = [
  'arch/msp430',
]

asm_nios2_sources = [
  'p/asm_nios2.c',
  'arch/nios/gnu/nios2-dis.c',
  'arch/nios/gnu/nios2-opc.c',
]

asm_or1k_sources = [
  'p/asm_or1k.c',
  'arch/or1k/or1k_disas.c',
]

asm_or1k_headers = [
  'arch/or1k',
]

asm_pic_sources = [
  'p/asm_pic.c',
  'arch/pic/pic_baseline.c',
  'arch/pic/pic_midrange.c',
  'arch/pic/pic_pic18.c',
]

asm_mcore_sources = [
  'p/asm_mcore.c',
  'arch/mcore/mcore.c',
]

asm_mcore_headers = [
  'arch/mcore',
]

asm_ppc_as_sources = [
  'p/asm_ppc_as.c',
]

asm_ppc_cs_sources = [
  'p/asm_ppc_cs.c',
]

asm_ppc_gnu_sources = [
  'p/asm_ppc_gnu.c',
  'arch/ppc/gnu/ppc-dis.c',
  'arch/ppc/gnu/ppc-opc.c',
  'arch/ppc/libvle/vle.c',
  'arch/ppc/libps/libps.c',
]

asm_propeller_sources = [
  'p/asm_propeller.c',
  'arch/propeller/propeller_disas.c',
]

asm_propeller_headers = [
  'arch/propeller',
]

asm_pyc_sources = [
  'p/asm_pyc.c',
  'arch/pyc/opcode_10.c',
  'arch/pyc/opcode_11.c',
  'arch/pyc/opcode_12.c',
  'arch/pyc/opcode_13.c',
  'arch/pyc/opcode_14.c',
  'arch/pyc/opcode_15.c',
  'arch/pyc/opcode_16.c',
  'arch/pyc/opcode_20.c',
  'arch/pyc/opcode_21.c',
  'arch/pyc/opcode_22.c',
  'arch/pyc/opcode_23.c',
  'arch/pyc/opcode_24.c',
  'arch/pyc/opcode_25.c',
  'arch/pyc/opcode_26.c',
  'arch/pyc/opcode_27.c',
  'arch/pyc/opcode_2x.c',
  'arch/pyc/opcode_30.c',
  'arch/pyc/opcode_31.c',
  'arch/pyc/opcode_32.c',
  'arch/pyc/opcode_33.c',
  'arch/pyc/opcode_34.c',
  'arch/pyc/opcode_35.c',
  'arch/pyc/opcode_36.c',
  'arch/pyc/opcode_37.c',
  'arch/pyc/opcode_38.c',
  'arch/pyc/opcode_39.c',
  'arch/pyc/opcode_3x.c',
  'arch/pyc/opcode_analysis.c',
  'arch/pyc/opcode_arg_fmt.c',
  'arch/pyc/opcode.c',
  'arch/pyc/pyc_dis.c',
]

asm_riscv_sources = [
  'p/asm_riscv.c',
]

asm_rsp_sources = [
  'p/asm_rsp.c',
  'arch/rsp/rsp_idec.c',
]

asm_rsp_headers = [
  'arch/rsp',
]

asm_sh_sources = [
  'p/asm_sh.c',
  'arch/sh/gnu/sh-dis.c',
]

asm_snes_sources = [
  'p/asm_snes.c',
]

asm_sparc_cs_sources = [
  'p/asm_sparc_cs.c',
]

asm_sparc_gnu_sources = [
  'p/asm_sparc_gnu.c',
  'arch/sparc/gnu/sparc-dis.c',
  'arch/sparc/gnu/sparc-opc.c',
]

asm_spc700_sources = [
  'p/asm_spc700.c',
]

asm_sysz_sources = [
  'p/asm_sysz.c',
]

asm_tms320_sources = [
  'p/asm_tms320.c',
  'arch/tms320/c55x_plus/c55plus.c',
  'arch/tms320/c55x_plus/c55plus_decode.c',
  'arch/tms320/c55x_plus/decode_funcs.c',
  'arch/tms320/c55x_plus/hashtable.c',
  'arch/tms320/c55x_plus/ins.c',
  'arch/tms320/c55x_plus/utils.c',
  'arch/tms320/tms320_dasm.c',
]

asm_tms320c64x_sources = [
  'p/asm_tms320c64x.c',
]

asm_tricore_sources = [
  'p/asm_tricore.c',
  'arch/tricore/gnu/cpu-tricore.c',
  'arch/tricore/gnu/tricore-dis.c',
  'arch/tricore/gnu/tricore-opc.c',
]

asm_v810_sources = [
  'p/asm_v810.c',
  'arch/v810/v810_disas.c',
]

asm_v810_headers = [
  'arch/v810',
]

asm_v850_sources = [
  'p/asm_v850.c',
  'arch/v850/v850_disas.c',
]

asm_v850_headers = [
  'arch/v850',
]

asm_vax_sources = [
  'p/asm_vax.c',
  'arch/vax/vax-dis.c',
]

asm_wasm_sources = [
  'p/asm_wasm.c',
  'arch/wasm/wasm.c',
]

asm_ws_sources = [
  'p/asm_ws.c',
  'arch/whitespace/wsdis.c',
]

asm_x86_as_sources = [
  'p/asm_x86_as.c',
]

asm_x86_cs_sources = [
  'p/asm_x86_cs.c',
]

asm_x86_nasm_sources = [
  'p/asm_x86_nasm.c',
]

asm_x86_nz_sources = [
  'p/asm_x86_nz.c',
]

asm_xap_sources = [
  'p/asm_xap.c',
]

asm_xcore_cs_sources = [
  'p/asm_xcore_cs.c',
]

asm_xtensa_sources = [
  'p/asm_xtensa.c',
  'arch/xtensa/gnu/elf32-xtensa.c',
  'arch/xtensa/gnu/xtensa-dis.c',
  'arch/xtensa/gnu/xtensa-isa.c',
  'arch/xtensa/gnu/xtensa-modules.c',
]

asm_z80_sources = [
  'p/asm_z80.c',
  'arch/z80/z80.c',
]

foreach p : asm_plugins
  c_files = get_variable('asm_@0@_sources'.format(p))
  h_files = get_variable('asm_@0@_headers'.format(p), [])
  h_files += ['../arch', '../arch/include']
  asm_plugin = library('asm_plugin_@0@'.format(p), c_files,
    include_directories: include_directories(h_files, platform_inc),
    cflags: library_cflags,
    static: true,
    install: false,
  )

  asm_plugin_dep = declare_dependency(link_with: asm_plugin, include_directories: h_files + platform_inc)
  set_variable('asm_plugin_@0@_dep', asm_plugin_dep)
  rz_asm_static_plugins += [asm_plugin_dep]
endforeach